welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:11: error: ';' expected but 'while' found.
    } while (!crossing())
      ^Poucet:13: error: 'while' expected but 'if' found.
  if (Biscuits >= 3){
  ^Poucet:20: error: '(' expected but '}' found.
}
^